# cmpt419_spring2025

./: LICENSE  README.md  generate_website.py  index.html  latebreakinglinks.md  pyproject.toml  readings.md  syllabus.md
assignments/: assignment1_tools.md  assignment2_influence.md  assignment_2_influence.md  assignment_3_data.md  assignment_4_datanapkinmath.md  project_proposal.md  project_rubric.md
cmpt419_decks/: package-lock.json  package.json  slides.md  week01-day02.md
docs/: index.html
misc/: Accessing Data Faq.md  Key_Dates.md  Optional_Deep_Dives.md  Optional_Experimental_Explainer_Docs.md  Week6_Example2Layer_OnePager.html  Week6_ExampleLogisticInfluence_OnePager.html  week6_inf_webpage.html
misc_materials/: LectureErratum.md  prereq.md  tmp.ipynb  week6_inf_webpage.html  week6_onwards.md
readings/: CourseReadings.md  Course_Readings.md  Optional_Classics.md  Optional_LateBreaking.md  ReadingTLDR.md  Readings_TLDR.md  hcai_classics.md  latebreakinglinks.md  readings.md  readings_tldr.md
slide_pdfs/: readme.md
slides_src/: main.ts  online-data-discussion-starter.md  package-lock.json  package.json  recap.md  week01-day01.md  week01-day02.md  week01.md  week02.md  week03-day01.md  week03.md  week04-day-01.md  week04.md  week05-day01-DRAFT.md  week05.md  week06-draft.md  week07-reading-week-placeholder.md  week08-scaling-draft.md  week08-scaling.md  week09-onlinedata1-draft.md  week09.md  week10-onlinedata2-draft.md  week10.md  week10_term.md  week11-onlinedata3.md  week11.md  week12-governance-draft.md  week12.md  week13-markets-draft.md
(+22 files in other folders)
