[project]
name = "cmpt419-spring2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "gobject>=0.1.0",
    "jinja2>=3.1.5",
    "markdown>=3.7",
    "pandas>=2.2.3",
    "pdfrw>=0.4",
    "presenterm-export>=0.2.7",
    "pypdf>=5.3.0",
    "pyyaml>=6.0.2",
    "weasyprint>=62.3",
]
